--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </header>
     <main>
       <section class="awesome-tools">
-        <h1 class="awesome-tools-title">Awesome tools for Designer & Developer.</h1>
+        <h1 class="awesome-tools-title">Awesome tools for Designer & Developer</h1>
         <p class="awesome-tools-text">Antool is a web collection of information on paid or free Design and Development tools</p>
         <form class="form-awesome-tools">
-          <input type="text" class="form-input-tools" placeholder="find more than 430+ tools..." />
+          <input type="text" class="form-input-tools" placeholder="find more than 430+ tools...">
           <button class="form-button-search">Search</button>
         </form>
         <div> 
@@ -245,7 +245,7 @@
         <h6 class="contributor-title">Become a contributor?</h6>
         <p class="contributor-text">Join us and get tips & tricks to become a great Designer and Developer</p>
         <form class="contributor-form">
-          <input class="contributor-form-input" type="text" placeholder="Enter your email..."/>
+          <input class="contributor-form-input" type="text" placeholder="Enter your email...">
           <button class="contributor-email-button-join">Join Us</button>
         </form>
       </section>
