--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           <span>
             <img src="./src/images/group-footer.png" alt="png">antools.
           </span>
-          <p>Copyright 2021. Antools</p>
+          <p class="footer-copyright">Copyright 2021. Antools</p>
           <p>Antool is a web collection of information on paid or free Design and Development toolsv</p>
         </div>
         <div>
