--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     <footer class="footer">
       <div class="footer-flex-container">
         <div>
-          <div class="g">
+          <div class="footer-logo">
             <img src="./src/images/group-footer.png" alt="png" />
             <p class="foter-text-logo">antools.</p>
           </div>
