--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     alt="png"
                   />
                   <div>
-                    <p class="program-tools-title">FIGMA</p>
+                    <p class="program-tools-title">Sketch</p>
                     <p class="program-tools-pay">Trial & Paid</p>
                   </div>
                 </div>
@@ -154,7 +154,7 @@
                     alt="png"
                   />
                   <div>
-                    <p class="program-tools-title">FIGMA</p>
+                    <p class="program-tools-title">Visual Studio Code</p>
                     <p class="program-tools-pay">Free</p>
                   </div>
                 </div>
@@ -183,7 +183,7 @@
                     alt="png"
                   />
                   <div>
-                    <p class="program-tools-title">FIGMA</p>
+                    <p class="program-tools-title">Notion</p>
                     <p class="program-tools-pay">Trial & Paid</p>
                   </div>
                 </div>
@@ -212,7 +212,7 @@
                     alt="png"
                   />
                   <div>
-                    <p class="program-tools-title">FIGMA</p>
+                    <p class="program-tools-title">Slack</p>
                     <p class="program-tools-pay">Trial & Paid</p>
                   </div>
                 </div>
@@ -241,7 +241,7 @@
                     alt="png"
                   />
                   <div>
-                    <p class="program-tools-title">FIGMA</p>
+                    <p class="program-tools-title">Invision</p>
                     <p class="program-tools-pay">Trial & Paid</p>
                   </div>
                 </div>
@@ -337,8 +337,8 @@
                         alt="png"
                       />
                       <div>
-                        <p class="newcomer-programs-title">Zeplin</p>
-                        <p class="newcomer-programs-pay">Free & Paid</p>
+                        <p class="newcomer-programs-title">PHPStorm</p>
+                        <p class="newcomer-programs-pay">Free</p>
                       </div>
                     </div>
                     <p class="newcomer-programs-text">
@@ -366,8 +366,8 @@
                         alt="png"
                       />
                       <div>
-                        <p class="newcomer-programs-title">Zeplin</p>
-                        <p class="newcomer-programs-pay">Free & Paid</p>
+                        <p class="newcomer-programs-title">Toolbox</p>
+                        <p class="newcomer-programs-pay">Free</p>
                       </div>
                     </div>
                     <p class="newcomer-programs-text">
@@ -395,8 +395,8 @@
                         alt="png"
                       />
                       <div>
-                        <p class="newcomer-programs-title">Zeplin</p>
-                        <p class="newcomer-programs-pay">Free & Paid</p>
+                        <p class="newcomer-programs-title">Procreate</p>
+                        <p class="newcomer-programs-pay">Paid</p>
                       </div>
                     </div>
                     <p class="newcomer-programs-text">
